near-sdk-macros/src/core_impl/code_generator/snapshots/no_args_no_return_no_mut_payable.snap
---
source: near-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[no_mangle]
pub extern "C" fn method() {
    ::near_sdk::env::setup_panic_hook();
    let contract = <Hello as ::near_sdk::state::ContractState>::state_read()
        .unwrap_or_default();
    Hello::method(&contract);
}
