near-sdk-macros/src/core_impl/code_generator/snapshots/persist_on_error.snap
---
source: near-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
assertion_line: 395
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[no_mangle]
pub extern "C" fn method() {
    ::near_sdk::env::setup_panic_hook();
    if ::near_sdk::env::attached_deposit().as_yoctonear() != 0 {
        ::near_sdk::env::panic_str("Method method doesn't accept deposit");
    }
    let mut contract: Hello = ::near_sdk::env::state_read().unwrap_or_default();
    let result = contract.method();
    match result {
        ::std::result::Result::Ok(result) => {
            let result = ::near_sdk::serde_json::to_vec(&result)
                .expect("Failed to serialize the return value using JSON.");
            ::near_sdk::env::value_return(&result);
            ::near_sdk::env::state_write(&contract);
        }
        ::std::result::Result::Err(err) => {
            ::near_sdk::env::state_write(&contract);
            let promise = Contract::ext(::near_sdk::env::current_account_id())
                .method_error(err)
                .as_return();
        }
    }
}
